--- a/template/a1_first.html
+++ b/template/a1_first.html
@@ -13,6 +13,16 @@
         <h1>i am in if block</h1>
         <h1>{{a}}</h1>
          {% endif %}
+
+         <h2>if-else</h2>
+         {% if a > b %}
+           <h2>inside if block</h2>
+           <h2>{{a}}</h2>
+           {% else %}
+           <h2>i am in else block </h2>
+           <h2>{{a}}</h2>
+           {% endif %}
+
     </center>
 </body>
 </html>
